Alembic - Broken UVs after export and test re-import #53572

Closed
opened 2017-12-17 15:35:41 +01:00 by Martin Felke · 3 comments
Member

System Information
Linux Mint 17.3, Geforce GTX 580

Blender Version
Broken: 2.79
Worked: never

Short description of error
Exporting and re-importing a blender scene with UVs and texture results in broken UVs. Textures have to be re-added by hand anyway.

Exact steps for others to reproduce the error

  1. Import attached .abc file

particleTest.abc

  1. Choose Object "Cube.002"
  2. In textures, Create a generated Image, like "Color Grid" for Material "Material"
  3. Map the texture via UV "Outer UV"
  4. Go to Material Mode and it should look like screenshot below.
  5. Problem occurs in Blender Internal as well as in Cycles.

abc_import_broken_uv.png

Expected result:

abc_import_fixed_uv.png

**System Information** Linux Mint 17.3, Geforce GTX 580 **Blender Version** Broken: 2.79 Worked: never **Short description of error** Exporting and re-importing a blender scene with UVs and texture results in broken UVs. Textures have to be re-added by hand anyway. **Exact steps for others to reproduce the error** 1. Import attached .abc file [particleTest.abc](https://archive.blender.org/developer/F1432273/particleTest.abc) 2. Choose Object "Cube.002" 3. In textures, Create a generated Image, like "Color Grid" for Material "Material" 4. Map the texture via UV "Outer UV" 5. Go to Material Mode and it should look like screenshot below. 6. Problem occurs in Blender Internal as well as in Cycles. ![abc_import_broken_uv.png](https://archive.blender.org/developer/F1432249/abc_import_broken_uv.png) Expected result: ![abc_import_fixed_uv.png](https://archive.blender.org/developer/F1432266/abc_import_fixed_uv.png)
Author
Member

Added subscriber: @scorpion81

Added subscriber: @scorpion81
Sybren A. Stüvel was assigned by Martin Felke 2017-12-17 17:09:05 +01:00

This issue was referenced by b1a036861d

This issue was referenced by b1a036861ddd08c314587666a028a59bfb049e54

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53572
No description provided.